feat: 댓글 리스트에 좋아요 관련 필드 추가(#132)